service.yaml
apiVersion: v1
kind: Service
metadata:
  name: currency-service
spec:
  type: ClusterIP
  selector:
    app: currency-app
  ports:
    - port: 80
      targetPort: 80
